--- a/openwisp_ipam/templates/admin/openwisp-ipam/subnet/change_list.html
+++ b/openwisp_ipam/templates/admin/openwisp-ipam/subnet/change_list.html
@@ -1,4 +1,4 @@
-{% extends "admin/change_list.html" %}
+{% extends "reversion/change_list.html" %}
 {% load i18n admin_urls %}
 
 {% block object-tools-items %}
