--- a/openwisp_ipam/static/openwisp-ipam/css/admin.css
+++ b/openwisp_ipam/static/openwisp-ipam/css/admin.css
@@ -1,11 +1,11 @@
-.list-ip{
+.list-ip {
   padding: 10px;
 }
-.subnet-visual{
+.subnet-visual {
   margin: 10px 20px 0;
   padding: 0;
 }
-section.subnet-visual{
+section.subnet-visual {
   overflow-anchor: none;
   overflow-y: scroll;
   height: 700px;
@@ -29,20 +29,26 @@ section.subnet-visual{
   width: 240px;
   padding: 8px 5px;
 }
-.subnet-visual a:hover{
+.subnet-visual a:hover {
   background: rgba(20, 102, 26, 1);
   border: 1px solid rgba(0, 0, 0, 0.4);
 }
-.subnet-visual a.used{
+.subnet-visual a.used {
   background: rgba(149, 10, 10, 0.9);
   border: 1px solid rgba(0, 0, 0, 0.2);
 }
-.subnet-visual a.used:hover{
+.subnet-visual a.used:hover {
   background: rgba(149, 10, 10, 1);
   border: 1px solid rgba(0, 0, 0, 0.4);
 }
 
-.subnet-visual .page{ display: inline }
+.subnet-visual .page {
+  display: inline;
+}
 
-#goto-input{ padding: 5px 10px }
-#goto-button{ padding: 7px 10px }
+#goto-input {
+  padding: 5px 10px;
+}
+#goto-button {
+  padding: 7px 10px;
+}
