--- a/openwisp_ipam/static/openwisp-ipam/css/admin.css
+++ b/openwisp_ipam/static/openwisp-ipam/css/admin.css
@@ -41,6 +41,9 @@ section.subnet-visual {
   background: rgba(149, 10, 10, 1);
   border: 1px solid rgba(0, 0, 0, 0.4);
 }
+.subnet-visual a.disabled {
+  cursor: not-allowed;
+}
 
 .subnet-visual .page {
   display: inline;
