[fix] Highlighting IP in go to IP instead of deleting previous rows #73
Instead of deleting previous rows when fetching IP
in search, it now scrolls to the IP till it is visible
on screen and highlights it.

Fixes #73

--- a/openwisp_ipam/static/openwisp-ipam/css/admin.css
+++ b/openwisp_ipam/static/openwisp-ipam/css/admin.css
@@ -46,6 +46,11 @@ section.subnet-visual {
   display: inline;
 }
 
+.highlighted-ip {
+    background-color: #fffa8c;
+    transition: background-color 0.5s;
+}
+
 #goto-input {
   padding: 5px 10px;
 }
