[admin/ipam] Add export all subnets feature #104
Added an export button to the subnet admin page  to export
all subnets in CSV format . The export is ordered by creation time,
optimized with select_related and covered by tests verifying multi-
subnet CSV output.

Fixes #104

--- a/openwisp_ipam/templates/admin/openwisp-ipam/subnet/change_list.html
+++ b/openwisp_ipam/templates/admin/openwisp-ipam/subnet/change_list.html
@@ -8,6 +8,11 @@
     {% trans 'Import Subnet' %}
   </a>
 </li>
+<li>
+  <a href="{% url 'admin:ipam_export_all_subnets' %}">
+    {% trans 'Export Subnets' %}
+  </a>
+</li>
 {% endif %}
 {{ block.super }}
 {% endblock %}
